Ensure headings inside post-content are not justify aligned.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,6 +158,9 @@ main > h1 {
   margin-top: var(--spacing-3xl);
   margin-bottom: var(--spacing-lg);
   line-height: var(--line-height-tight);
+  text-align: start;
+  text-wrap: wrap; /* Need to define this here because Firefox does not support "pretty" yet */
+  text-wrap: pretty;
 }
 
 .post-content h1 { font-size: var(--font-size-3xl); }
